Fix styles. Add disable button. Fix missing space

--- a/frontend/scripts/react-components/shared/profile-selector/profile-panel/profile-panel.scss
+++ b/frontend/scripts/react-components/shared/profile-selector/profile-panel/profile-panel.scss
@@ -9,7 +9,7 @@
 
   padding: 30px 0;
 
-  .profile-panel-switch {
+  .profile-panel-content {
     margin-top: 20px;
   }
 }
